@@ -3,6 +3,7 @@
 ==============================
 Release 5.*
 ==============================
+2014-05-25    Add CancelTryAgainContinue to WPFMessageBox
 2014-05-25    Add optional help button to the WPFMessageBox
 2014-05-25    Change messagebox text from TextBlock to Label to have it catchable by coded UI
 2014-05-25    Add missing automation ID for the messagebox text and icon
